--- a/Application/platforms/android/res/xml/config.xml
+++ b/Application/platforms/android/res/xml/config.xml
@@ -48,7 +48,7 @@
     <allow-intent href="sms:*" />
     <allow-intent href="mailto:*" />
     <allow-intent href="geo:*" />
-    <preference name="Orientataion" value="portrait" />
+    <preference name="Orientation" value="portrait" />
     <preference name="webviewbounce" value="false" />
     <preference name="UIWebViewBounce" value="false" />
     <preference name="DisallowOverscroll" value="true" />
