--- a/Application/app/pages/Busker/Busker.jade
+++ b/Application/app/pages/Busker/Busker.jade
@@ -2,7 +2,7 @@ ion-content(class="Busker")
     ion-icon((click)="close()" name="md-close")
     div([hidden] = "state_flag" class="connection")
         h1 wait
-        h2 사물과 연결을 시도합니다 (터치꾸욱 누르면 재연결).
+        h2 사물과 연결을 시도합니다.
     div([hidden] = "!state_flag" class="panel")
         center
         div(class="Count")
