--- a/Application/app/pages/Busker/Busker.jade
+++ b/Application/app/pages/Busker/Busker.jade
@@ -9,4 +9,5 @@ ion-content(class="Busker")
             h2 실시간 호감도
             h1(style="color : #F85F73") {{real_time_heart}}
             h2 실시간 비트코인
-            h1 {{real_time_bitcoin}}    
+            h1 {{real_time_bitcoin}}
+            button((click) ="run_calculate()" ) 결산처리
