--- a/Application/app/pages/Busker/Busker.scss
+++ b/Application/app/pages/Busker/Busker.scss
@@ -46,8 +46,16 @@
             h2 {
                 margin-top: 30%;
                 font-weight: 700;
-                color: #fff;
-                font-size: 3.5vmax;
+                color: #333;
+                font-size: 3.3vmax;
+            }
+            button {
+                margin-top: 40%;
+                width: 100%;
+                font-weight: 700;
+                color: #eee;
+                font-size: 2.8vmax;
+                background-color: #449811;
             }
         }
     }
