--- a/Application/app/pages/Main/Main.scss
+++ b/Application/app/pages/Main/Main.scss
@@ -225,16 +225,10 @@
 
 @keyframes main-up {
     0% {
-        transform: scale(2);
-    }
-    25% {
-        transform: scale(1.2);
-    }
-    50% {
-        transform: scale(1.4);
+        opacity: 0;
     }
     100% {
-        transform: scale(1);
+        opacity: 1;
     }
 }
 
