--- a/Application/app/pages/Main/directive/heart.jade
+++ b/Application/app/pages/Main/directive/heart.jade
@@ -5,18 +5,27 @@ ion-content(class="heart")
             h2 사용자 코인 보유량
             h1 {{user_coin}}
 
-    ion-slides((press)="press_coin_size_up($event)" pager)
+    ion-slides((press)="press_Coin_task($event)" pager)
         ion-slide
-            img((click)="coin_size_up(false,0)" src="{{donation_method[0].image}}")
+            img((click)="Coin_task(0)" src="{{donation_method[0].image}}")
             h2 {{donation_method[0].name}}
         ion-slide
-            img((click)="coin_size_up(false,100)" src="{{donation_method[1].image}}" )
+            img((click)="Coin_task(100)" src="{{donation_method[1].image}}" )
             h2 {{donation_method[1].name}}
         ion-slide
-            img((click)="coin_size_up(false,1000)" src="{{donation_method[2].image}}" )
+            img((click)="Coin_task(500)" src="{{donation_method[2].image}}" )
             h2 {{donation_method[2].name}}
         ion-slide
-            img((click)="coin_size_up(false,10000)" src="{{donation_method[3].image}}")
-            h2 {{donation_method[3].name}}  
+            img((click)="Coin_task(1000)" src="{{donation_method[3].image}}" )
+            h2 {{donation_method[3].name}}            
+        ion-slide
+            img((click)="Coin_task(2000)" src="{{donation_method[4].image}}" )
+            h2 {{donation_method[4].name}}
+        ion-slide
+            img((click)="Coin_task(5000)" src="{{donation_method[5].image}}")
+            h2 {{donation_method[5].name}}  
+        ion-slide
+            img((click)="Coin_task(10000)" src="{{donation_method[6].image}}" )
+            h2 {{donation_method[6].name}}
     center                     
         ion-icon([hidden]="show_state" class="selection" name = "md-checkmark") <br/>체크되었습니다.                                          
